--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <h2>Bienvenido {{ user }}</h2>
   <div class="actions">
     <button (click)="irClientes()">Gestión de Clientes</button>
+    <button (click)="irProductos()">Gestión de Productos</button>
     <button (click)="logout()">Cerrar sesión</button>
   </div>
 </div>
